finish the installation guide